--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "webtask-slack-translate",
   "version": "1.0.0",
   "description": "Webtask Slack Integration using the Google Translate API",
-  "main": "translate.js",
+  "main": "dist/webtask.js",
   "scripts": {
-    "build": "rollup src/webtask.js --format cjs --output dist/webtask.js",
+    "build": "rollup -c",
     "create": "npm run build && wt create --name translate --secrets-file .env dist/webtask.js",
     "deploy": "npm run build && wt update translate dist/webtask.js",
     "test": "mocha"
@@ -17,10 +17,16 @@
   "author": "Tyler Metevier",
   "license": "MIT",
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
+    "babelrc-rollup": "^3.0.0",
     "chai": "^4.0.1",
     "mocha": "^3.4.2",
-    "rollup": "^0.42.0"
+    "rollup": "^0.42.0",
+    "rollup-plugin-babel": "^2.7.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
