--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rollup -c",
     "create": "npm run build && wt create --name translate --secrets-file .env dist/webtask.js",
     "deploy": "npm run build && wt update translate dist/webtask.js",
-    "test": "mocha"
+    "test": "mocha test/unit",
+    "test:all": "mocha test/**/*"
   },
   "keywords": [
     "webtask",
@@ -22,6 +23,7 @@
     "babel-register": "^6.24.1",
     "babelrc-rollup": "^3.0.0",
     "chai": "^4.0.1",
+    "dotenv": "^4.0.0",
     "mocha": "^3.4.2",
     "rollup": "^0.42.0",
     "rollup-plugin-babel": "^2.7.1"
