--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^4.0.0",
     "mocha": "^3.4.2",
     "rollup": "^0.42.0",
-    "rollup-plugin-babel": "^2.7.1"
+    "rollup-plugin-babel": "^2.7.1",
+    "sinon": "^2.3.2"
   },
   "dependencies": {
     "request": "^2.81.0"
